--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -1,11 +1,27 @@
+html, body {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+
 .container {
   display: flex;
+  width: 100%;
   justify-content: space-around;
+  align-items: center
 }
 
 .svg-container {
   display: flex;
+  width: 25%;
   flex-direction: column;
+  justify-content: center;
+}
+
+.chart {
+  display: flex;
+  justify-content: center;
 }
 
 .info-box {
