add tick marks around donut

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,3 +105,8 @@ g.visits > path.smartphone {
     font-size: 2.5vh;
   }
 }
+
+.tick {
+  stroke: var(--light-text-color);
+  stroke-width: 2;
+}
